BB-3918: Product image thumbnail is too small on product view  - fix image size styles

--- a/src/Oro/Bundle/FrontendBundle/Resources/public/default/scss/_legacy/products-widget.scss
+++ b/src/Oro/Bundle/FrontendBundle/Resources/public/default/scss/_legacy/products-widget.scss
@@ -209,13 +209,13 @@
 
     &_in-cart {
       float: left;
-      width: 82px;
-      height: 82px;
+      width: 84px;
+      height: 84px;
 
       a {
         display: block;
-        width: 82px;
-        height: 82px;
+        width: 84px;
+        height: 84px;
         overflow: hidden;
         border: 1px solid $theme-lighter-gray-color;
         border-radius: 5px;
@@ -792,7 +792,7 @@
     position: relative;
 
     &_in-cart {
-      padding: 0 0 0 105px;
+      padding: 0 0 0 107px;
     }
   }
 
